--- a/docker/dockerfile/Dockerfile.sdwebui_ext
+++ b/docker/dockerfile/Dockerfile.sdwebui_ext
@@ -48,7 +48,8 @@ RUN cd $NOTEBOOK_DIR/stable-diffusion-webui/repositories && git clone https://gi
 # RUN git clone --depth=1 https://github.com/civitai/sd_civitai_extension
 # 安装 SD-CN-Animation 拓展
 RUN git clone --depth=1 https://github.com/volotat/SD-CN-Animation
-
+# 安装 Ultimate SD Upscale 拓展
+RUN git clone --depth=1 https://github.com/Coyote-A/ultimate-upscale-for-automatic1111
 
 # 进行一次安装，以便将插件的依赖安装到容器中
 WORKDIR $NOTEBOOK_DIR/stable-diffusion-webui
