--- a/docker/src/configs/globalConfig.yaml
+++ b/docker/src/configs/globalConfig.yaml
@@ -1,14 +1,19 @@
-dockerfilesDir: ./dockerfile
-contextDir: ./context
+# 定义锚点
+defaults: &defaults
+  dockerfilesDir: ./dockerfile
+  contextDir: ./context
 
+# 引用锚点
 dockerBuildConfig:
   conda_build:
+    <<: *defaults
     tag: conda:jupyter
     dockerfile: Dockerfile.conda
     label: CONDA_IMAGE.LABEL
     hint: CONDA_IMAGE.HINT
 
   py_build:
+    <<: *defaults
     tag: py:3.10.6-torch2.0.0
     dockerfile: Dockerfile.pytorch
     label: PYTORCH_IMAGE.LABEL
@@ -16,6 +21,7 @@ dockerBuildConfig:
     dependencies: [conda_build]
 
   sdwebui_base_build:
+    <<: *defaults
     tag: sdwebui_base:rtx4090
     launchDockerfile: Dockerfile.sdwebui_base.launch
     dockerfile: Dockerfile.sdwebui_base
@@ -23,6 +29,7 @@ dockerBuildConfig:
     dependencies: [conda_build, py_build]
 
   sdwebui_ext_build:
+    <<: *defaults
     tag: sdwebui_ext:rtx4090
     launchDockerfile: Dockerfile.sdwebui_ext.launch
     dockerfile: Dockerfile.sdwebui_ext
@@ -32,6 +39,7 @@ dockerBuildConfig:
     endpointBuild: true
 
   lama_cleaner_build:
+    <<: *defaults
     tag: lama_cleaner:rtx4090
     launchDockerfile: Dockerfile.lama_cleaner.launch
     dockerfile: Dockerfile.lama_cleaner
@@ -41,6 +49,7 @@ dockerBuildConfig:
     endpointBuild: true
 
   comfyui_base_build:
+    <<: *defaults
     tag: comfyui_base:rtx4090
     launchDockerfile: Dockerfile.comfyui.launch
     dockerfile: Dockerfile.comfyui_base
@@ -49,6 +58,7 @@ dockerBuildConfig:
     dependencies: [conda_build, py_build]
 
   comfyui_ext_build:
+    <<: *defaults
     tag: comfyui_ext:rtx4090
     launchDockerfile: Dockerfile.comfyui.launch
     dockerfile: Dockerfile.comfyui_ext
@@ -58,10 +68,9 @@ dockerBuildConfig:
     endpointBuild: true
 
   tpsmm_base_build:
+    <<: *defaults
     tag: tpsmm_base:rtx4090
     launchDockerfile: Dockerfile.tpsmm_base.launch
     dockerfile: Dockerfile.tpsmm_base
     label: TPSMM_BASE_IMAGE.LABEL
-    hint: TPSMM_BASE_IMAGE.HINT
-    dependencies: [conda_build, py_build]
-    endpointBuild: true
+    hint: TPSMM_BASE
