--- a/docker/package.json
+++ b/docker/package.json
@@ -14,6 +14,7 @@
     "cpx": "^1.5.0",
     "i18next": "^22.4.15",
     "js-yaml": "^4.1.0",
+    "nunjucks": "^3.2.4",
     "picocolors": "^1.0.0",
     "progress": "^2.0.3"
   },
@@ -22,6 +23,7 @@
     "@types/i18next": "^13.0.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.16.1",
+    "@types/nunjucks": "^3.2.2",
     "@types/progress": "^2.0.5",
     "del-cli": "^5.0.0",
     "pkg": "^5.8.1",
