--- a/docker/src/configs/globalConfig.yaml
+++ b/docker/src/configs/globalConfig.yaml
@@ -144,6 +144,7 @@ dockerBuildConfig:
         test: true
         prod: false
       mountVolumes:
+        - ${host_base}/.cache:/root/.cache
         - /home/lco/GitHub/StableTalker:${cont_stk}
         - /home/lco/下载/tps_docker_demo:${cont_stk}/input
         - /home/lco/下载/output:${cont_stk}/output
