autolaunch stable talker

--- a/docker/dockerfile/launch/Dockerfile.stable_talker.launch
+++ b/docker/dockerfile/launch/Dockerfile.stable_talker.launch
@@ -1,3 +1,12 @@
 FROM stable_talker:rtx4090
 
 ENV STABLE_TALKER_PORT=${STABLE_TALKER_PORT}
+
+# 复制启动脚本到容器中
+COPY /context/scripts/*.sh /scripts/
+RUN chmod +x /scripts/*.sh
+
+ENV NOTEBOOK_DIR /home
+WORKDIR $NOTEBOOK_DIR/StableTalker
+
+ENTRYPOINT /scripts/run_stable_talker.sh
